@@ -4,9 +4,12 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import com.fasterxml.jackson.datatype.jsr310.deser.LocalDateTimeDeserializer;
 import com.fasterxml.jackson.datatype.jsr310.ser.LocalDateTimeSerializer;
+import lombok.AllArgsConstructor;
 import lombok.Getter;
+import lombok.NoArgsConstructor;
 import lombok.RequiredArgsConstructor;
 import org.antlr.v4.runtime.misc.Pair;
+import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -15,11 +18,13 @@ import org.springframework.jdbc.core.JdbcTemplate;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileOutputStream;
+import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.ZoneOffset;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.stream.Collectors;
 import jakarta.annotation.PostConstruct;
@@ -35,23 +40,18 @@ import jakarta.annotation.PostConstruct;
 @RequiredArgsConstructor
 public class ForumDataSimulation {
 
-    private final JdbcTemplate jdbcTemplate;
-
     // 知识领域映射 (使用 String 作为知识领域标签)
     private static final List<String> KNOWLEDGE_AREA_TAGS = List.of(
             "前端开发", "后端开发", "数据科学", "视觉设计", "产品管理", "云计算与运维");
 
+    // 是否使用虚拟时间
+    public static final boolean USE_VIRTUAL_TIME = true;
     // 模拟用户行为特征定义
     private static final int GENERATE_DAYS_RANGE = 300; // 生成数据的时间范围（天）, 需大于180
-    // 起始和结束时间
-    private static final LocalDateTime NOW = TimeSimulation.now();
-    private static final LocalDateTime START_TIME = NOW.minusDays(GENERATE_DAYS_RANGE);
     // 生成用户量
     private static final int SIMULATE_USER_COUNT = 2000;
-    // 是否为保存模式
-    private static final boolean IS_SAVE_MODE = true;
     // 是否为读取模式
-    private static final boolean IS_LOAD_MODE = false;
+    public static final boolean IS_LOAD_MODE = false;
     // 模拟行为文件夹
     private static final String SIMULATION_DATA_FOLDER = "./simulation/";
     // 模拟行为文件
@@ -59,13 +59,21 @@ public class ForumDataSimulation {
     // 用户行为枚举
     private static final WeightedList<UserBehavior> SIMULATE_USER_BEHAVIORS = new WeightedList<>(List.of(
             new Pair<>(new UserBehavior(
+                    "沉默浏览型",
+                    new WeightedList<>(List.of(0, 2, 5), List.of(80, 15, 5)),
+                    new WeightedList<>(List.of(0), List.of(1)),
+                    new WeightedList<>(List.of(1, 2, 3), List.of(80, 15, 5)),
+                    new InteractionMetrics(200, 80, 0.005, 0.001, 0.001, 0.002, 0.005),
+                    Optional.empty()
+            ), 30),
+            new Pair<>(new UserBehavior(
                     "量产低质型",
                     new WeightedList<>(List.of(60, 90, 150), List.of(50, 35, 15)),
                     new WeightedList<>(List.of(0), List.of(1)),
                     new WeightedList<>(List.of(1, 2, 3), List.of(80, 18, 2)),
                     new InteractionMetrics(800, 250, 0.01, 0.002, 0.001, 0.003, 0.025),
                     Optional.empty()
-            ), 6),
+            ), 4),
             new Pair<>(new UserBehavior(
                     "稳健创作型",
                     new WeightedList<>(List.of(24, 36, 60), List.of(60, 30, 10)),
@@ -73,7 +81,7 @@ public class ForumDataSimulation {
                     new WeightedList<>(List.of(1, 2, 3), List.of(20, 60, 20)),
                     new InteractionMetrics(8000, 3000, 0.05, 0.015, 0.008, 0.012, 0.004),
                     Optional.of(new SpecialPostRules(0.01, 5.0, 1.6, 1.6, 1.6, 1.6, 1.6))
-            ), 22),
+            ), 15),
             new Pair<>(new UserBehavior(
                     "爆款拉动型",
                     new WeightedList<>(List.of(24, 36, 72), List.of(50, 40, 10)),
@@ -81,7 +89,7 @@ public class ForumDataSimulation {
                     new WeightedList<>(List.of(1, 2, 3), List.of(30, 50, 20)),
                     new InteractionMetrics(4000, 2500, 0.04, 0.01, 0.006, 0.01, 0.005),
                     Optional.of(new SpecialPostRules(0.08, 10.0, 1.8, 1.8, 1.8, 1.8, 1.8))
-            ), 12),
+            ), 8),
             new Pair<>(new UserBehavior(
                     "长文深度收藏型",
                     new WeightedList<>(List.of(12, 18, 30), List.of(70, 25, 5)),
@@ -89,7 +97,7 @@ public class ForumDataSimulation {
                     new WeightedList<>(List.of(1, 2, 3), List.of(5, 35, 60)),
                     new InteractionMetrics(5500, 2000, 0.05, 0.03, 0.012, 0.06, 0.003),
                     Optional.empty()
-            ), 8),
+            ), 6),
             new Pair<>(new UserBehavior(
                     "传播导向型",
                     new WeightedList<>(List.of(36, 48, 80), List.of(50, 35, 15)),
@@ -97,7 +105,7 @@ public class ForumDataSimulation {
                     new WeightedList<>(List.of(1, 2, 3), List.of(70, 25, 5)),
                     new InteractionMetrics(12000, 6000, 0.03, 0.006, 0.05, 0.006, 0.006),
                     Optional.empty()
-            ), 8),
+            ), 6),
             new Pair<>(new UserBehavior(
                     "讨论驱动型",
                     new WeightedList<>(List.of(18, 24, 36), List.of(60, 30, 10)),
@@ -105,7 +113,7 @@ public class ForumDataSimulation {
                     new WeightedList<>(List.of(1, 2, 3), List.of(10, 55, 35)),
                     new InteractionMetrics(4500, 2200, 0.035, 0.05, 0.008, 0.018, 0.007),
                     Optional.empty()
-            ), 8),
+            ), 6),
             new Pair<>(new UserBehavior(
                     "争议两极型",
                     new WeightedList<>(List.of(12, 16, 30), List.of(60, 30, 10)),
@@ -113,7 +121,7 @@ public class ForumDataSimulation {
                     new WeightedList<>(List.of(1, 2, 3), List.of(30, 50, 20)),
                     new InteractionMetrics(6000, 4000, 0.03, 0.05, 0.01, 0.01, 0.03),
                     Optional.of(new SpecialPostRules(0.2, 4.0, 2.0, 2.0, 2.0, 1.0, 2.0))
-            ), 5),
+            ), 4),
             new Pair<>(new UserBehavior(
                     "标题党低转化型",
                     new WeightedList<>(List.of(20, 30, 50), List.of(50, 35, 15)),
@@ -121,7 +129,7 @@ public class ForumDataSimulation {
                     new WeightedList<>(List.of(1, 2, 3), List.of(70, 25, 5)),
                     new InteractionMetrics(30000, 15000, 0.007, 0.002, 0.005, 0.001, 0.012),
                     Optional.empty()
-            ), 12),
+            ), 8),
             new Pair<>(new UserBehavior(
                     "单领域精品型",
                     new WeightedList<>(List.of(10, 15, 24), List.of(70, 25, 5)),
@@ -129,7 +137,7 @@ public class ForumDataSimulation {
                     new WeightedList<>(List.of(1, 2, 3), List.of(10, 40, 50)),
                     new InteractionMetrics(2500, 900, 0.04, 0.018, 0.012, 0.07, 0.002),
                     Optional.of(new SpecialPostRules(0.25, 3.0, 1.5, 1.5, 1.5, 2.0, 1.5))
-            ), 7),
+            ), 5),
             new Pair<>(new UserBehavior(
                     "单领域勤奋型",
                     new WeightedList<>(List.of(30, 45, 70), List.of(40, 40, 20)),
@@ -137,8 +145,10 @@ public class ForumDataSimulation {
                     new WeightedList<>(List.of(1, 2, 3), List.of(30, 60, 10)),
                     new InteractionMetrics(2000, 700, 0.025, 0.006, 0.004, 0.013, 0.005),
                     Optional.empty()
-            ), 12)
+            ), 8)
     ));
+    // 依赖注入 JdbcTemplate 用于原生 SQL 操作
+    private final JdbcTemplate jdbcTemplate;
 
     private static final Logger log = LoggerFactory.getLogger(ForumDataSimulation.class);
     private final Random random = new Random();
@@ -148,8 +158,15 @@ public class ForumDataSimulation {
     private final Map<Long, ContentRecord> contentDB = new ConcurrentHashMap<>();
     private final List<InteractionEventRecord> eventLog = Collections.synchronizedList(new ArrayList<>());
 
+    // 时间控制
+    private LocalDateTime lastUpdateTime = TimeSimulation.now();
+    private final LocalDateTime startTime = lastUpdateTime.minusDays(GENERATE_DAYS_RANGE);
+
     // 模拟保存数据结构
     private final ObjectMapper objectMapper = new ObjectMapper();
+    private final SimulationSaveData fullSaveData = new SimulationSaveData(
+            new ArrayList<>(), new ArrayList<>(), lastUpdateTime
+    );
 
     // 唯一 ID 生成器
     private final AtomicLong memberIdCounter = new AtomicLong(103);
@@ -157,8 +174,15 @@ public class ForumDataSimulation {
     private final AtomicLong eventIdCounter = new AtomicLong(1);
 
     // 内部数据实体定义 (使用 Record 模拟)
-    // MemberRecord 匹配 Member 表
-    private record MemberRecord(long id, String name, LocalDateTime joinDate) {}
+    // MemberRecord 匹配 Member 表, 多了对应的
+    private record MemberRecord(
+            long id,
+            String name,
+            LocalDateTime joinDate,
+            int behaviorIndex,
+            List<String> domains,
+            int postCountBase
+    ) {}
 
     // ContentRecord 匹配 ContentSnapshot 表（不含 cis_score）
     private record ContentRecord(
@@ -212,11 +236,13 @@ public class ForumDataSimulation {
     ) implements ExtraRules {}
 
 
-    private record SimulationSaveData(
-            List<MemberRecord> members,
-            List<ContentRecord> contents,
-            LocalDateTime timestamp
-    ) {}
+    @AllArgsConstructor
+    @NoArgsConstructor
+    private static class SimulationSaveData {
+        public List<MemberRecord> members;
+        public List<ContentRecord> contents;
+        public LocalDateTime timestamp;
+    }
 
     // 初始化方法，由Spring在构造函数执行后自动调用
     @PostConstruct
@@ -238,10 +264,7 @@ public class ForumDataSimulation {
             loadFromFile();
         } else {
             simulate();
-            if (IS_SAVE_MODE) {
-                // 保存数据到文件
-                saveToFile();
-            }
+            saveToFile();
         }
     }
 
@@ -292,86 +315,153 @@ public class ForumDataSimulation {
             int userCount = distributes[i];
             log.info("生成用户行为类型 '{}' 的用户，共计 {} 人。", behavior.behaviorName, userCount);
             for (int j = 0; j < userCount; j++) {
-                generateUserOfBehavior(behavior);
+                generateUserOfBehavior(i);
             }
+        }
+    }
+
+    // 持续生成方法
+    @Scheduled(initialDelay = 15, fixedRate = 30, timeUnit = TimeUnit.SECONDS) // 每1分钟执行一次
+    private void simulateDailyUpdates() {
+        LocalDateTime now = TimeSimulation.now();
+        LocalDate nowDate = now.toLocalDate();
+        LocalDate lastUpdateDate = lastUpdateTime.toLocalDate();
+        // 计算与上次更新是否在同一天
+        if (nowDate.isAfter(lastUpdateDate)) {
+            log.info("检测到新的一天{}，开始生成新的内容数据...", now.toLocalDate());
+            // 生成新的内容数据
+            generateNewDayContent(nowDate);
+            lastUpdateTime = now;
+            fullSaveData.timestamp = lastUpdateTime;
+            // 保存到文件
+            saveToFile();
         }
     }
 
     // 根据用户特征生成用户
-    private void generateUserOfBehavior(UserBehavior behavior) {
+    private void generateUserOfBehavior(int behaviorIndex) {
+        UserBehavior behavior = SIMULATE_USER_BEHAVIORS.getElements().get(behaviorIndex);
         // 计算需要抽取的领域数
         int domainCount = behavior.domains.size();
         // 抽取领域
         List<String> domains = sample(KNOWLEDGE_AREA_TAGS, domainCount);
+        int postCountBase = sample(behavior.postCountBase);
         // 生成用户
-        MemberRecord memberRecord = generateRandomMember(behavior.behaviorName, domains.get(0));
+        MemberRecord memberRecord = generateRandomMember(behaviorIndex, domains, postCountBase);
 
         // 计算需要生成的文章数
-        int articlesToGenerate = randAround(sample(behavior.postCountBase), 10);
+        int articlesToGenerate = randAround(postCountBase, 10);
         // 生成文章发布时间
-        List<LocalDateTime> publishDates = sampleDates(START_TIME, GENERATE_DAYS_RANGE, articlesToGenerate);
+        List<LocalDateTime> publishDates = sampleDates(startTime, GENERATE_DAYS_RANGE, articlesToGenerate);
 
         for (LocalDateTime publishDate : publishDates) {
-            // 随机选择领域和长度等级
-            String domainTag = domains.get(sample(behavior.domains));
-            int lengthLevel = sample(behavior.lengthLevels);
 
-            // 生成阅读量, 正态分布
-            long readCount = (long) Math.max(0, normalRandom(behavior.interaction.readMean, behavior.interaction.readStdDev));
-
-            InteractionCount interactionCount = new InteractionCount(
-                    readCount,
-                    randAround((long) (readCount * behavior.interaction.likePercent), 10),
-                    randAround((long) (readCount * behavior.interaction.commentPercent), 10),
-                    randAround((long) (readCount * behavior.interaction.sharePercent), 10),
-                    randAround((long) (readCount * behavior.interaction.collectPercent), 10),
-                    randAround((long) (readCount * behavior.interaction.hatePercent), 10)
-            );
-
-            // 检查是否应用特殊文章规则
-            if (behavior.extraRules.isPresent()) {
-                ExtraRules extraRules = behavior.extraRules.get();
-                if (extraRules instanceof SpecialPostRules specialRules) {
-                    // 抽中
-                    if (random.nextDouble() < specialRules.percent) {
-                        interactionCount = new InteractionCount(
-                                (long) (interactionCount.readCount * specialRules.readMultiplier),
-                                (long) (interactionCount.likeCount * specialRules.likeMultiplier),
-                                (long) (interactionCount.commentCount * specialRules.commentMultiplier),
-                                (long) (interactionCount.shareCount * specialRules.shareMultiplier),
-                                (long) (interactionCount.collectCount * specialRules.collectMultiplier),
-                                (long) (interactionCount.hateCount * specialRules.hateMultiplier)
-                        );
-                    }
-                } else {
-                    log.warn("未知的额外规则类型: {}", extraRules.getClass().getName());
-                    throw new IllegalArgumentException("未知的额外规则类型");
-                }
-            }
-
-            // 生成内容记录
-            ContentRecord content = generateContent(
+            ContentRecord content = generateSingleArticle(
+                    behavior,
+                    domains,
                     memberRecord.id,
-                    domainTag,
-                    publishDate,
-                    lengthLevel,
-                    interactionCount
+                    publishDate
             );
 
             contentDB.put(content.id, content);
-            logContent(content);
+            fullSaveData.contents.add(content);
+//            logContent(content);
+        }
+    }
+
+    private void generateNewDayContent(LocalDate currentDate) {
+        // 遍历所有成员，按其行为特征生成新内容
+        for (MemberRecord member : fullSaveData.members) {
+            // 成员的行为特征
+            UserBehavior behavior = SIMULATE_USER_BEHAVIORS.getElements().get(member.behaviorIndex);
+            // 抽取领域
+            List<String> domains = member.domains;
+            // 计算需要生成的文章数
+            WeightedList<Boolean> postDecision = new WeightedList<>(
+                    List.of(true, false), List.of(member.postCountBase, GENERATE_DAYS_RANGE - member.postCountBase)
+            );
+            int articlesToGenerate = sample(postDecision) ? 1 : 0;
+            // 生成文章发布时间
+            LocalDateTime startOfDay = currentDate.atStartOfDay();
+            List<LocalDateTime> publishDates = sampleDates(startOfDay, 1, articlesToGenerate);
+
+            for (LocalDateTime publishDate : publishDates) {
+
+                ContentRecord content = generateSingleArticle(
+                        behavior,
+                        domains,
+                        member.id,
+                        publishDate
+                );
+
+                contentDB.put(content.id, content);
+                fullSaveData.contents.add(content);
+//                logContent(content);
+            }
+        }
+    }
+
+
+    private ContentRecord generateSingleArticle(
+            UserBehavior behavior,
+            List<String> domains,
+            long memberId,
+            LocalDateTime publishDate
+    ) {
+        // 随机选择领域和长度等级
+        String domainTag = domains.get(sample(behavior.domains));
+        int lengthLevel = sample(behavior.lengthLevels);
+
+        // 生成阅读量, 正态分布
+        long readCount = (long) Math.max(0, normalRandom(behavior.interaction.readMean, behavior.interaction.readStdDev));
+
+        InteractionCount interactionCount = new InteractionCount(
+                readCount,
+                randAround((long) (readCount * behavior.interaction.likePercent), 10),
+                randAround((long) (readCount * behavior.interaction.commentPercent), 10),
+                randAround((long) (readCount * behavior.interaction.sharePercent), 10),
+                randAround((long) (readCount * behavior.interaction.collectPercent), 10),
+                randAround((long) (readCount * behavior.interaction.hatePercent), 10)
+        );
+
+        // 检查是否应用特殊文章规则
+        if (behavior.extraRules.isPresent()) {
+            ExtraRules extraRules = behavior.extraRules.get();
+            if (extraRules instanceof SpecialPostRules specialRules) {
+                // 抽中
+                if (random.nextDouble() < specialRules.percent) {
+                    interactionCount = new InteractionCount(
+                            (long) (interactionCount.readCount * specialRules.readMultiplier),
+                            (long) (interactionCount.likeCount * specialRules.likeMultiplier),
+                            (long) (interactionCount.commentCount * specialRules.commentMultiplier),
+                            (long) (interactionCount.shareCount * specialRules.shareMultiplier),
+                            (long) (interactionCount.collectCount * specialRules.collectMultiplier),
+                            (long) (interactionCount.hateCount * specialRules.hateMultiplier)
+                    );
+                }
+            } else {
+                log.warn("未知的额外规则类型: {}", extraRules.getClass().getName());
+                throw new IllegalArgumentException("未知的额外规则类型");
+            }
         }
 
+        // 生成内容记录
+        return fillContent(
+                memberId,
+                domainTag,
+                publishDate,
+                lengthLevel,
+                interactionCount
+        );
     }
     
     // 辅助初始化方法
-    private ContentRecord generateContent(
+    private ContentRecord fillContent(
             long authorId,
             String knowledgeTag,
             LocalDateTime publishTime,
             int lengthLevel,
             InteractionCount interaction
-
     ) {
         long newContentId = contentIdCounter.incrementAndGet();
 
@@ -417,13 +507,8 @@ public class ForumDataSimulation {
     }
 
     private void saveToFile() {
-        SimulationSaveData saveData = new SimulationSaveData(
-                new ArrayList<>(memberDB.values()),
-                new ArrayList<>(contentDB.values()),
-                NOW
-        );
         try {
-            objectMapper.writeValue(new FileOutputStream(SIMULATION_DATA_FILE), saveData);
+            objectMapper.writeValue(new FileOutputStream(SIMULATION_DATA_FILE), fullSaveData);
             log.info("模拟数据已保存到 {} 文件。", SIMULATION_DATA_FILE);
         } catch (Exception e) {
             log.error("保存模拟数据时出错: {}", e.getMessage());
@@ -433,13 +518,17 @@ public class ForumDataSimulation {
     private void loadFromFile() {
         try {
             SimulationSaveData saveData = objectMapper.readValue(new FileInputStream(SIMULATION_DATA_FILE), SimulationSaveData.class);
-            for (MemberRecord member : saveData.members()) {
+            for (MemberRecord member : saveData.members) {
                 memberDB.put(member.id, member);
             }
-            for (ContentRecord content : saveData.contents()) {
+            fullSaveData.members.addAll(saveData.members);
+            for (ContentRecord content : saveData.contents) {
                 contentDB.put(content.id, content);
             }
-            log.info("模拟数据已从 {} 文件加载。", SIMULATION_DATA_FILE);
+            fullSaveData.contents.addAll(saveData.contents);
+            fullSaveData.timestamp = saveData.timestamp;
+            lastUpdateTime = saveData.timestamp;
+            log.info("模拟数据已从 {} 文件加载, 保存时间: {}。", SIMULATION_DATA_FILE, saveData.timestamp);
         } catch (Exception e) {
             log.error("加载模拟数据时出错: {}", e.getMessage());
         }
@@ -466,20 +555,20 @@ public class ForumDataSimulation {
     /**
      * 新增方法：随机生成一个新的用户（MemberRecord）。
      */
-    private MemberRecord generateRandomMember(String behaviorName, String domainTag) {
+    private MemberRecord generateRandomMember(int behaviorIndex, List<String> domains, int postCountBase) {
         // 获取递增的成员 ID
         long newMemberId = memberIdCounter.incrementAndGet();
 
-        String newName = behaviorName + newMemberId + domainTag;
+        String behaviorName = SIMULATE_USER_BEHAVIORS.getElements().get(behaviorIndex).behaviorName;
 
-        // 设置加入时间在过去 GENERATE_DAYS_RANGE 天内
-        LocalDateTime newJoinDate = LocalDateTime.now().minusDays(GENERATE_DAYS_RANGE);
+        String newName = behaviorName + '-' + newMemberId + '-' + String.join("+", domains);
 
         // 创建新成员
-        MemberRecord newMember = new MemberRecord(newMemberId, newName, newJoinDate);
+        MemberRecord newMember = new MemberRecord(newMemberId, newName, startTime, behaviorIndex, domains, postCountBase);
         memberDB.put(newMemberId, newMember);
+        fullSaveData.members.add(newMember);
         // 显示日志
-        log.info("【新成员】注册成功: ID={}, 姓名={}, 加入时间={}", newMemberId, newName, newJoinDate);
+//        log.info("【新成员】注册成功: ID={}, 姓名={}, 加入时间={}", newMemberId, newName, newJoinDate);
 
         return newMember;
     }
@@ -600,31 +689,35 @@ public class ForumDataSimulation {
     }
 
     /**
-     * 接口：提供最新的全量内容数据快照。
+     * 接口：提供最新的增量内容数据快照。
      * 返回结构已对齐 ContentSnapshot 表结构（不含 cis_score）。
      * @return 内容快照列表（DTOs）
      */
     public List<Map<String, Object>> getContentSnapshot() {
-         log.info("【评级系统 PULL】拉取内容快照 (全量)。");
-         return contentDB.values().stream()
+         log.info("【评级系统 PULL】拉取内容快照 (增量)。");
+        List<Map<String, Object>> result = contentDB.values().stream()
                 .map(this::mapContentRecordToSnapshot) // 使用方法引用，明确类型
-                .collect(Collectors.toList());
+                .toList();
+        contentDB.clear();
+        return result;
     }
 
     /**
-     * 接口：提供最新的全量成员数据快照。
+     * 接口：提供最新的增量成员数据快照。
      * 返回结构已对齐 Member 表结构。
      * @return 成员快照列表（DTOs）
      */
     public List<Map<String, Object>> getMemberSnapshot() {
-        log.info("【评级系统 PULL】拉取成员快照 (全量)。");
-        return memberDB.values().stream()
+        log.info("【评级系统 PULL】拉取成员快照 (增量)。");
+        List<Map<String, Object>> result = memberDB.values().stream()
                .map(m -> Map.<String, Object>of(
                        "member_id", m.id,
                        "name", m.name,
                        "join_date", m.joinDate.toString()
                ))
-               .collect(Collectors.toList());
+               .toList();
+        memberDB.clear();
+        return result;
     }
 
     /**
@@ -708,7 +801,18 @@ public class ForumDataSimulation {
             }
             // 然后分配剩余部分
             if (remain > 0) {
-                // 之后再细化算法吧, 大致是需要计算小数, 然后考虑哪些向上取整哪些向下取整
+                List<Pair<Integer, Double>> fractionalParts = new ArrayList<>();
+                for (int i = 0; i < this.size(); i++) {
+                    double exact = (weights.get(i) * (num / (double) totalWeight));
+                    double fractional = exact - Math.floor(exact);
+                    fractionalParts.add(new Pair<>(i, fractional));
+                }
+                // 按小数部分排序，优先分配给小数部分大的
+                fractionalParts.sort((a, b) -> Double.compare(b.b, a.b));
+                for (int i = 0; i < remain; i++) {
+                    int index = fractionalParts.get(i).a;
+                    distributes[index] += 1;
+                }
             }
 
             return distributes;
